--- a/.github/workflows/Python.text.yaml
+++ b/.github/workflows/Python.text.yaml
@@ -5,33 +5,44 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: windows-latest
+    timeout-minutes: 10
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.12'
+        cache: 'pip'
         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-mock streamlit pandas sqlite3
+        pip install pytest pytest-mock streamlit pandas pytest-cov
+        if exist requirements.txt pip install -r requirements.txt
         
     - name: Run tests
       run: |
-        python -m pytest tests/test_budgets.py -v
-
+        python -m pytest tests/test_budgets.py -v --cov=pages --cov-report=xml
+        
     - name: Upload test results
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: test-results
         path: |
+          coverage.xml
           .pytest_cache
-          test-results.xml
+        retention-days: 14
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
