update for windows specific testing

--- a/.github/workflows/Python.text.yaml
+++ b/.github/workflows/Python.text.yaml
@@ -32,10 +32,21 @@ jobs:
         if (-not (Test-Path "tests")) { New-Item -ItemType Directory -Path "tests" }
         if (-not (Test-Path "pages")) { New-Item -ItemType Directory -Path "pages" }
         
-    - name: Run tests
+    - name: Run tests with detailed output
       run: |
         echo "=================== Running Tests ==================="
         python -m pytest tests/test_budgets.py -vv --cov=pages --cov-report=term-missing --cov-report=xml --junitxml=test-results.xml
+        
+        echo "`n================= Test Summary ==================="
+        Get-Content test-results.xml | Select-String "testsuite" | ForEach-Object {
+            $_ -match 'tests="(\d+)" failures="(\d+)" errors="(\d+)"' | Out-Null
+            Write-Host "Total Tests: $($Matches[1])"
+            Write-Host "Failures: $($Matches[2])"
+            Write-Host "Errors: $($Matches[3])"
+        }
+        
+        echo "`n================= Coverage Report ================"
+        coverage report
       continue-on-error: true
         
     - name: Test Report
@@ -58,8 +69,9 @@ jobs:
       with:
         name: test-results
         path: |
+          test-results.xml
           coverage.xml
-          .pytest_cache
+          .coverage
         retention-days: 14
         if-no-files-found: warn
 
