--- a/.github/workflows/Python.text.yaml
+++ b/.github/workflows/Python.text.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-mock streamlit pandas pytest-cov
+        pip install pytest pytest-mock streamlit pandas pytest-cov python-dotenv
         pip install -r requirements.txt
         
     - name: Create directories
